--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Open+Sans:wght@300&family=Raleway:wght@200&display=swap');
 
 
+@font-face {
+    font-family: "Open Sans Light";
+    src: url('clientcrash.com/font/Open_Sans/1.ttf');
+}
 
 body{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans Light', sans-serif;
     text-align: center;
     background: black;
     color: white;
