--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: "Open Sans Light";
-    src: url('clientcrash.com/font/Open_Sans/1.ttf');
+    src: url('https://clientcrash.com/font/Open_Sans/1.ttf');
 }
 
 body{
