--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ body{
     text-align: center;
     background: black;
     color: white;
+    animation: hue 10s forwards 4s 1;
 }
 
 
@@ -41,7 +42,14 @@ body{
 
 }
 
-
+@keyframes hue{
+    0%{
+        background: black;
+    }
+    100%{
+        background: linear-gradient(to right,#FF12B8,#E4AD0D);
+    }
+}
 
 @keyframes rotateone {
     0% {
